# agent

./: .gitignore  PROJECT_ANALYSIS.md  README.md  pyproject.toml
docs/: travel-agent-architecture.md
src/travel_agent/: __init__.py  acceptance.py  agent.py  cli.py  config.py  data_governance.py  domain_agents.py  evaluation.py  governance.py  integrations.py  mock_tools.py  models.py  observability.py  operations.py  permissions.py  release_control.py  release_gate.py  smoke.py  state.py  storage.py  tools.py  worker.py
tests/: test_agent.py
