[project]
name = "travel-agent-mvp"
version = "0.1.0"
description = "Single-agent MVP for enterprise travel workflows"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

